modify JAVA_ARG